--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <!DOCTYPE html>
 <html class="">
 <head>
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title></title>
+	<title>Portfolio Website</title>
   
-  <link rel="stylesheet" href="assets/css/all.css">
+	<link rel="stylesheet" href="assets/css/all.css">
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
 </head>
@@ -19,9 +19,7 @@
 {% include header.html %}
 {% include about.html %}
 {% include work.html %}
-<!-- <p>Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel.</p>
-
- -->
+{% include clients.html %}
 {% include footer.html %}
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
