--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
 {% include clients.html %}
 {% include footer.html %}
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+
+<script src="assets/js/jquery.min.js"></script>
+
+
+<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+ -->
+
 <script src="assets/js/functions.js"></script>
 <!-- REMEMBER TO ADD ANALYTICS! -->
 </body>
