--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 {% include about.html %}
 {% include work.html %}
 {% include clients.html %}
+{% include contact.html %}
+{% include form.html %}
 {% include footer.html %}
 
 
