add placeholders and social icons

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Portfolio Website</title>
+	<title>My Portfolio</title>
   
 	<link rel="stylesheet" href="assets/css/all.css">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
 </head>
@@ -26,11 +27,10 @@
 
 
 
-<script src="assets/js/jquery.min.js"></script>
+<!-- <script src="assets/js/jquery.min.js"></script> -->
 
 
-<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
- -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <script src="assets/js/functions.js"></script>
 <!-- REMEMBER TO ADD ANALYTICS! -->
