change icon dir

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>My Portfolio</title>
   
 	<link rel="stylesheet" href="assets/css/all.css">
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
 </head>
