add blackjack project

--- a/assets/work/proj-8.html
+++ b/assets/work/proj-8.html
@@ -1,1 +1,2 @@
-<img src="assets/img/work/proj-8/stripes-co-NickZoutendijk.jpg" alt="Stripes & Co" />
+<p>Some more projects will be added soon</p>
+<img src="assets/img/work/proj-8/img1.png" alt="Placeholder" />
