--- a/assets/work/proj-2.html
+++ b/assets/work/proj-2.html
@@ -1,3 +1,7 @@
-<img src="assets/img/work/proj-2/CityIn-AntonSkvortsov.jpg" alt="City In" />
+<p>My version of RiceRocks (Asteroids) game <a href="http://www.codeskulptor.org/#user40_ZX2whmMIac_4.py" target="_blank">RiceRocks</a> written in Python. Use arrows to control the ship and space to shoot. Try to stand as long as you can. Have fun :)</p>
 
-<p>Some projects will be added soon</p>
+<img src="assets/img/work/proj-2/img1.jpg" alt="RiceRock">
+<img src="assets/img/work/proj-2/img2.jpg" alt="RiceRock">
+<img src="assets/img/work/proj-2/img3.jpg" alt="RiceRock">
+
+
