a little link fix

--- a/assets/work/proj-2.html
+++ b/assets/work/proj-2.html
@@ -1,4 +1,4 @@
-<p>My version of RiceRocks (Asteroids) game <a href="http://www.codeskulptor.org/#user40_ZX2whmMIac_4.py" target="_blank">RiceRocks</a> written in Python. Use arrows to control the ship and space to shoot. Try to stand as long as you can. Have fun :)</p>
+<p>My version of <a href="http://www.codeskulptor.org/#user40_ZX2whmMIac_4.py" target="_blank">RiceRocks (Asteroids)</a> game  written in Python. Use arrows to control the ship and space to shoot. Try to stand as long as you can. Have fun :)</p>
 
 <img src="assets/img/work/proj-2/img1.jpg" alt="RiceRock">
 <img src="assets/img/work/proj-2/img2.jpg" alt="RiceRock">
