add move project

--- a/assets/work/proj-3.html
+++ b/assets/work/proj-3.html
@@ -1,1 +1,4 @@
-<img src="assets/img/work/proj-3/CrispyIcons-PetrasNargela.jpg" alt="Crispy Icons" />
+<p><a href="http://codepen.io/alscream/full/gaPwom/" target="_blank">Landing page template</a></p>
+
+
+<img src="assets/img/work/proj-3/img-1.jpg" alt="Move" />
