--- a/assets/work/proj-4.html
+++ b/assets/work/proj-4.html
@@ -1,1 +1,4 @@
-<img src="assets/img/work/proj-4/flatmobile-AyoubElred.jpg" alt="Flat Mobile UX" />
+<p><a href="http://codepen.io/alscream/full/zvrNNP/" target="_blank">Photographer website template</a></p>
+
+<img src="assets/img/work/proj-4/img-1.jpg" alt="Red Eye photography" />
+
