--- a/assets/work/proj-1.html
+++ b/assets/work/proj-1.html
@@ -1,6 +1,5 @@
-<p>A simplified version of <a href="http://www.codeskulptor.org/#user40_1B5SiRj1hk_0.py" target="_blank">Blackjack</a> written in Python. The dealer always wins ties.</p>
+<p><a href="http://codepen.io/alscream/full/QjEZVV/" target="_blank">News website template</a></p>
 
-<img src="assets/img/work/proj-1/img1.jpg" alt="Blackjack">
-<img src="assets/img/work/proj-1/img2.jpg" alt="Blackjack">
-<img src="assets/img/work/proj-1/img3.jpg" alt="Blackjack">
+<img src="assets/img/work/proj-1/img1.jpg" alt="Newsroom">
+
 
