--- a/assets/work/proj-5.html
+++ b/assets/work/proj-5.html
@@ -1,1 +1,4 @@
-<img src="assets/img/work/proj-5/freshitup-JieyuXiong.jpg" alt="Fersh It Up" />
+<p><a href="http://codepen.io/alscream/full/VvjVXX/" target="_blank">Travel application landing page</a></p>
+
+<img src="assets/img/work/proj-5/img-1.jpg" alt="Excursion" />
+
