add bolt, adoptly, bass

--- a/assets/work/proj-6.html
+++ b/assets/work/proj-6.html
@@ -1,1 +1,4 @@
-<img src="assets/img/work/proj-6/TimeLinePage-SergeyValiukh.jpg" alt="Time Line Page" />
+<p><a href="http://codepen.io/alscream/full/YyWRBj/" target="_blank">Music application landing page</a></p>
+
+<img src="assets/img/work/proj-6/img-1.jpg" alt="Bass" />
+
