--- a/assets/work/proj-7.html
+++ b/assets/work/proj-7.html
@@ -1,8 +1,4 @@
-<img src="assets/img/work/proj-7/img0.jpg" alt="Weather Dashboard">
-<img src="assets/img/work/proj-7/img1.jpg" alt="Weather Dashboard">
-<img src="assets/img/work/proj-7/img2.jpg" alt="Weather Dashboard">
+<p><a href="http://codepen.io/alscream/full/JYKwXv/" target="_blank">Pets webpage template</a></p>
 
-<p>Some projects will be added soon</p>
+<img src="assets/img/work/proj-7/img-1.jpg" alt="Adoptly" />
 
-<img src="assets/img/work/proj-7/img3.jpg" alt="Weather Dashboard">
-<img src="assets/img/work/proj-7/img4.jpg" alt="Weather Dashboard">
