--- a/assets/work/proj-8.html
+++ b/assets/work/proj-8.html
@@ -1,2 +1,4 @@
-<p>Some more projects will be added soon</p>
-<img src="assets/img/work/proj-8/img1.png" alt="Placeholder" />
+<p><a href="http://codepen.io/alscream/full/KdMbWa/" target="_blank">Movies webpage template</a></p>
+
+<img src="assets/img/work/proj-8/img-1.jpg" alt="Bolt network" />
+
