--- a/assets/work/proj-1.html
+++ b/assets/work/proj-1.html
@@ -1,4 +1,4 @@
-<p><a href="http://codepen.io/alscream/full/QjEZVV/" target="_blank">News website template</a></p>
+<p>In this project I developed Graphic Mockup into <a href="http://codepen.io/alscream/full/QjEZVV/" target="_blank">Responsive HTML Mockup</a> using Twitter Bootstrap 3</p>
 
 <img src="assets/img/work/proj-1/img1.jpg" alt="Newsroom">
 
