--- a/assets/work/proj-3.html
+++ b/assets/work/proj-3.html
@@ -1,4 +1,3 @@
-<p><a href="http://codepen.io/alscream/full/gaPwom/" target="_blank">Landing page template</a></p>
-
+<p>In this project I developed Graphic Mockup into <a href="http://codepen.io/alscream/full/gaPwom/" target="_blank">Responsive HTML Mockup</a> using Twitter Bootstrap 3</p>
 
 <img src="assets/img/work/proj-3/img-1.jpg" alt="Move" />
