--- a/assets/work/proj-4.html
+++ b/assets/work/proj-4.html
@@ -1,4 +1,4 @@
-<p><a href="http://codepen.io/alscream/full/zvrNNP/" target="_blank">Photographer website template</a></p>
+<p>In this project I developed photographer portfolio Graphic Mockup into <a href="http://codepen.io/alscream/full/zvrNNP/" target="_blank">Responsive HTML Mockup</a></p>
 
 <img src="assets/img/work/proj-4/img-1.jpg" alt="Red Eye photography" />
 
