--- a/assets/work/proj-5.html
+++ b/assets/work/proj-5.html
@@ -1,4 +1,3 @@
-<p><a href="http://codepen.io/alscream/full/VvjVXX/" target="_blank">Travel application landing page</a></p>
-
+<p>In this project I turned Travel application landing page Graphic Mockup into <a href="http://codepen.io/alscream/full/VvjVXX/" target="_blank">Responsive HTML Mockup</a></p>
 <img src="assets/img/work/proj-5/img-1.jpg" alt="Excursion" />
 
