--- a/assets/work/proj-7.html
+++ b/assets/work/proj-7.html
@@ -1,4 +1,4 @@
-<p><a href="http://codepen.io/alscream/full/JYKwXv/" target="_blank">Pets webpage template</a></p>
+<p>In this project I turned Graphic Mockup into <a href="http://codepen.io/alscream/full/JYKwXv/" target="_blank">Responsive HTML Mockup</a></p>
 
 <img src="assets/img/work/proj-7/img-1.jpg" alt="Adoptly" />
 
