--- a/assets/work/proj-8.html
+++ b/assets/work/proj-8.html
@@ -1,4 +1,4 @@
-<p><a href="http://codepen.io/alscream/full/KdMbWa/" target="_blank">Movies webpage template</a></p>
+<p>In this project I developed Movies webpage Graphic Mockup into <a href="http://codepen.io/alscream/full/KdMbWa/" target="_blank">Responsive HTML Mockup</a> using Twitter Bootstrap 3</p>
 
 <img src="assets/img/work/proj-8/img-1.jpg" alt="Bolt network" />
 
