--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>My Portfolio</title>
-  
+
 	<link rel="stylesheet" href="assets/css/all.css">
 	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
   <!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -30,9 +30,9 @@
 <!-- <script src="assets/js/jquery.min.js"></script> -->
 
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script async src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-<script src="assets/js/functions.js"></script>
+<script async src="assets/js/functions.js"></script>
 <!-- REMEMBER TO ADD ANALYTICS! -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
