--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!-- <script src="assets/js/jquery.min.js"></script> -->
 
 
-<script async src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <script async src="assets/js/functions.js"></script>
 <!-- REMEMBER TO ADD ANALYTICS! -->
