--- a/assets/work/proj-4.html
+++ b/assets/work/proj-4.html
@@ -1,4 +1,4 @@
-<p>In this project I developed photographer portfolio Graphic Mockup into <a href="http://codepen.io/alscream/full/zvrNNP/" target="_blank">Responsive HTML Mockup</a></p>
+<p>In this project I developed a responsive mockup of an <a href="http://aliaksandr-s.github.io/agency_website/" target="_blank">agency website</a></p>
 
-<img src="assets/img/work/proj-4/img-1.jpg" alt="Red Eye photography" />
+<img src="assets/img/work/proj-4/img-1.jpg" alt="Agency website" />
 
