--- a/assets/work/proj-7.html
+++ b/assets/work/proj-7.html
@@ -1,4 +1,4 @@
-<p>In this project I turned Graphic Mockup into <a href="http://codepen.io/alscream/full/JYKwXv/" target="_blank">Responsive HTML Mockup</a></p>
+<p>Simple <a href="http://aliaksandr-s.github.io/jQuery_bootstrap_todo/" target="_blank">To-do app</a> implemented using local storage to save your notes</p>
 
-<img src="assets/img/work/proj-7/img-1.jpg" alt="Adoptly" />
+<img src="assets/img/work/proj-7/img-1.jpg" alt="to-do" />
 
