--- a/assets/work/proj-9.html
+++ b/assets/work/proj-9.html
@@ -1,4 +1,4 @@
-<p>Frogger like game written in JavaScript<a href="http://aliaksandr-s.github.io/courses/Udacity/frontend-nanodegree-arcade-game/" target="_blank">Play</a></p>
+<p><a href="http://aliaksandr-s.github.io/courses/Udacity/frontend-nanodegree-arcade-game/" target="_blank">Frogger like game</a> written in JavaScript</p>
 
 <img src="assets/img/work/proj-9/img-1.jpg" alt="Bolt network" />
 
