--- a/assets/work/proj-9.html
+++ b/assets/work/proj-9.html
@@ -1,4 +1,3 @@
-<p>In this project I developed Movies webpage Graphic Mockup into <a href="http://codepen.io/alscream/full/KdMbWa/" target="_blank">Responsive HTML Mockup</a> using Twitter Bootstrap 3</p>
+<p><a href="http://aliaksandr-s.github.io/courses/Udacity/frontend-nanodegree-arcade-game/" target="_blank">Frogger like game</a> written in JavaScript</p>
 
-<img src="assets/img/work/proj-8/img-1.jpg" alt="Bolt network" />
-
+<img src="assets/img/work/proj-9/img-1.jpg" alt="Frogger game" />
