--- a/assets/work/proj-10.html
+++ b/assets/work/proj-10.html
@@ -1,4 +1,3 @@
-<p>In this project I developed Movies webpage Graphic Mockup into <a href="http://codepen.io/alscream/full/KdMbWa/" target="_blank">Responsive HTML Mockup</a> using Twitter Bootstrap 3</p>
+<p>In this project I developed <a href="http://aliaksandr-s.github.io/video_playing_web_application/" target="_blank">video preview single page application</a> using vanila JS and AJAX </p>
 
 <img src="assets/img/work/proj-8/img-1.jpg" alt="Bolt network" />
-
