--- a/assets/work/proj-11.html
+++ b/assets/work/proj-11.html
@@ -1,3 +1,3 @@
-<p>In this project I developed Movies webpage Graphic Mockup into <a href="http://codepen.io/alscream/full/KdMbWa/" target="_blank">Responsive HTML Mockup</a> using Twitter Bootstrap 3</p>
+<p>In this project I turned a psd mockup into a <a href="https://aliaksandr-s.github.io/AFG_landing/" target="_blank">responsive landing page</a> and added some interactivity using jQuery plugins</p>
 
-<img src="assets/img/work/proj-11/img-1.jpg" alt="Bolt network" />
+<img style src="assets/img/work/proj-11/img-1.jpg" alt="landing preview" />
