--- a/assets/work/proj-12.html
+++ b/assets/work/proj-12.html
@@ -1,3 +1,8 @@
-<p>In this project I developed Movies webpage Graphic Mockup into <a href="http://codepen.io/alscream/full/KdMbWa/" target="_blank">Responsive HTML Mockup</a> using Twitter Bootstrap 3</p>
+<p>In this project I developed 4 psd mockups into an html code.
+    <a href="https://aliaksandr-s.github.io/barbershop/index.html" target="_blank">Preview</a>
+</p>
 
-<img src="assets/img/work/proj-12/img-1.jpg" alt="Bolt network" />
+<img src="assets/img/work/proj-12/img-1.jpg" alt="screenshot" />
+<img src="assets/img/work/proj-12/img-2.jpg" alt="screenshot" />
+<img src="assets/img/work/proj-12/img-3.jpg" alt="screenshot" />
+<img src="assets/img/work/proj-12/img-4.jpg" alt="screenshot" />
