--- a/assets/work/proj-4.html
+++ b/assets/work/proj-4.html
@@ -1,4 +1,3 @@
-<p>In this project I developed a responsive mockup of an <a href="http://aliaksandr-s.github.io/agency_website/" target="_blank">agency website</a></p>
+<p>In this project I turned a psd mockup of an <a href="http://aliaksandr-s.github.io/agency_website/" target="_blank">agency website</a> to an html code</p> 
 
 <img src="assets/img/work/proj-4/img-1.jpg" alt="Agency website" />
-
