added angular projects

--- a/assets/work/proj-12/proj-12.html
+++ b/assets/work/proj-12/proj-12.html
@@ -1,4 +1,4 @@
-<p>In this project I developed 4 psd mockups into an html code.
+<p>In this project I developed 4 psd mockups into html code.
     <a href="https://aliaksandr-s.github.io/barbershop/index.html" target="_blank">Preview</a>
 </p>
 
