Add work section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     {% include header.html %}
     {% include about.html %}
     {% include work.html %}
+    {% include projects.html %}
     {% include clients.html %}
     {% include contact.html %}
     {% include form.html %}
